# wifi-hotspot

./: .gitignore  README.md  common.sh  find_interfaces.sh  monitor.sh  network.sh  pyproject.toml  scan.py  scan.sh  services.sh  setup.sh  start.sh  stop.sh  teardown.sh
scripts/: credentials.sh  find_interfaces.sh  firewall.sh  scan.sh  skeleton.sh  start.sh
src/hotspot/: __init__.py  __main__.py  py.typed
src/hotspot/cli/: __init__.py  base.py  find_interfaces.py  monitor.py  scan.py  setup.py  start.py  stop.py  teardown.py
src/hotspot/core/: __init__.py  firewall.py  interface.py  mac.py  network.py  process.py
src/hotspot/credentials/: __init__.py  generator.py  validator.py
src/hotspot/scanner/: __init__.py  parser.py  probe.py
src/hotspot/services/: __init__.py  dnsmasq.py  hostapd.py  hotspot.py
src/hotspot/utils/: __init__.py  config.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/unit/: test_base.py  test_cli_commands.py  test_config.py  test_credentials.py  test_dnsmasq.py  test_exceptions.py  test_firewall.py  test_hostapd.py  test_hotspot.py  test_interface.py  test_logging.py  test_mac.py  test_network.py  test_parser.py  test_probe.py  test_process.py  test_validator.py
